--- a/_includes/editable.html
+++ b/_includes/editable.html
@@ -25,6 +25,7 @@
     box-shadow: 0px 8px 6px 0px rgba(0,0,0,0.2);
     padding: 0px 10px;
     z-index: 1;
+    right:1%;
 }
 
 .dropdown:hover .dropdown-content {
@@ -34,7 +35,7 @@
 <script>
 $(document).ready(function() {
 
-    var divs = $("#h1,h2,h3,h4"); 
+    var divs = $("#h1,h2,h3,h4");
     $.each(divs, function(i,e){
 
         // Edit
